ant script update